main.css
*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
body {
  display: grid;
  width: 90%;
  margin: auto;
  grid-template-areas: "header header header"
  "side article1 article2"
  "side article3 article4"
  "side article7 article8"
  "footer footer footer";
  grid-template-columns: 25% 37.5% 37.5%;
  grid-template-rows: 4rem 20rem 20rem 20rem 2rem;
  grid-gap: 1rem;
}

header {
  grid-area: header;
  border-bottom: 1px solid;
  display: flex;
  align-items: center;
  justify-content: center;
}

aside {
  grid-area: side;
  border-right: 1px solid;
}
aside div{
  height: 50%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  /* border: 1px solid orange; */
}
aside .png{
  /* border: 1px solid; */
  width: 100%;
  background: url(/HelloDarkness/imgs/night_mode.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position-y: 100%;
}
hr{
  border: 1px solid;
  width: 75%;
  margin: auto;
}
aside .svg{
  /* border: 1px solid; */
  width: 100%;
  background: url(/HelloDarkness/imgs/night_mode.svg);
  background-size: contain;
  background-repeat: no-repeat;
  background-position-y: 100%;
}
.png-img, .svg-img{
  width: 100%;
}

.posts{
  margin: .5rem;
  border: 1px solid;
  box-shadow: 5px 5px 10px #1c1c1c;
}
.frame{
  background-image:url(https://placekitten.com/700/700);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100%;
  /* border: 1px solid red; */
  overflow: hidden;
  position: relative;
  width: 100%;
}
.posts, .frame{
  border-radius: 5px;
}
.frame a .caption {
  background-color: rgba(28, 28, 28, 0.9);
  display: block;
  overflow: hidden;
  padding: 1rem;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 80%;
  transition-property: top;
  transition-duration: 1s;
  width: 100%;
  z-index: 10;
}
.frame a:hover .caption {
  top: 35%;
  transition: all 1s;
}
.frame a .caption h2 {
  color: #e6e7e8;
  text-align: center;
}
.frame a .caption p {
  color: #e6e7e8;
  display: none;
  line-height: 150%;
  transition: all 1s;
  text-indent: 2rem;
}
.frame a:hover .caption p {
  display: block;
  margin-bottom: 20px;
}

.article1 {
  grid-area: article1;
  /* border: 1px dashed; */
}
.article2 {
  grid-area: article2;
  /* border: 1px dashed; */
}
.article3 {
  grid-area: article3;
  /* border: 1px dashed; */
}
.article4 {
  grid-area: article4;
  /* border: 1px dashed; */
}
.article7 {
  grid-area: article7;
  /* border: 1px dashed; */
}
.article8 {
  grid-area: article8;
  /* border: 1px dashed; */
}

footer {
  grid-area: footer;
  border-top: 1px solid;
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (prefers-color-scheme: dark){
  html,body{
    background-color: #e6e7e8;
    color: #1c1c1c;
  }
  h1:after{
    content: "light";
  }
}
@media (prefers-color-scheme: light){
  html,body{
    background-color: #e6e7e8;
    color: #1c1c1c;
  }
  h1:after{
    content: "light";
  }
  aside .png{
    background: url(/HelloDarkness/imgs/light_mode.png);
  }
  aside .svg{
    background: url(/HelloDarkness/imgs/light_mode.png);
  }
  aside .svg, aside .png{
    background-size: contain;
    background-repeat: no-repeat;
    background-position-y: 100%;
  }
}

